fixed "jumping text" in TypeSprint

--- a/web_page/styles.css
+++ b/web_page/styles.css
@@ -411,7 +411,6 @@ table, th, td{
 
 .type-sprint mark {
     background-color: #FFED29;
-    padding: 3px;
     border-radius: 5px;
 }
 
